Angular - login service implemented.

--- a/CPR_progress_monitoring_service/ClientApp/src/app/pages/auth/components/login-form/login-form.component.html
+++ b/CPR_progress_monitoring_service/ClientApp/src/app/pages/auth/components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form class="form" [formGroup]="form" (ngSubmit)="login()">
+<form class="form" [formGroup]="loginForm" (ngSubmit)="login()">
   <mat-form-field class="form__input">
     <input matInput placeholder="Email Address" type="email" formControlName="email">
   </mat-form-field>
@@ -8,7 +8,8 @@
   </mat-form-field>
 
   <div class="form-actions">
-    <button class="form-actions__login" mat-raised-button color="primary" type="submit">Login</button>
+    <button class="form-actions__login" mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">Login</button>
     <button class="form-actions__forget" mat-button>Forget password</button>
   </div>
 </form>
+
